Archive2/98/d1df66b68dd86b/output
main.cpp:14:9: error: too few arguments to function call, expected 1, have 0; did you mean '::foo'?
        foo();
        ^~~
        ::foo
main.cpp:2:6: note: '::foo' declared here
void foo()
     ^
1 error generated.
