Archive2/98/d1df66b68dd86b/main.cpp

void foo()
{}

class A
{
public:
    virtual void foo(int x)
    {
    }
    
    void boo()
    {
        foo();
    }
};


int main()
{
}